[tool.poetry]
name = "qstash-python"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Upstash <support@upstash.com>", "Meshan Khosla <meshan@upstash.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pyjwt = "^2.8.0"
aiohttp = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.23.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
